<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7ECEAEA"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.DetailActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_icon_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/icon"
        android:foregroundGravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/user1" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_user_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/uname"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"/>

        <TextView
            android:gravity="center"
            android:id="@+id/tv_location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginEnd="10dp"
            />


        <ImageView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_company" />

        <TextView
            android:gravity="center"
            android:id="@+id/tv_company_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_follower"
            />

        <TextView
            android:id="@+id/tv_follower_detail"
            android:layout_marginEnd="3dp"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            />
        <TextView
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="22dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_following"
            />

        <TextView
            android:id="@+id/tv_following_detail"
            android:layout_marginEnd="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/_2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/following"/>

        <ImageView
            android:layout_marginEnd="2dp"

            android:layout_width="15dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_repo"
            />

        <TextView
            android:id="@+id/tv_repository_detail"
            android:layout_marginEnd="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/_2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository"/>

    </LinearLayout>

</LinearLayout>