<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginRight="16dp"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/icon"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_xxx"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/iv_icon"
            card_view:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uname"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="15dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/follower"
            android:src="@drawable/ic_follower"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_icon" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/imageView"
            card_view:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/follower"
            card_view:layout_constraintStart_toEndOf="@+id/tv_follower"
            card_view:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="15dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_following"
            card_view:layout_constraintStart_toEndOf="@+id/textView"
            card_view:layout_constraintTop_toTopOf="@+id/imageView"
            android:contentDescription="@string/following" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/imageView2"
            card_view:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/following"
            card_view:layout_constraintStart_toEndOf="@+id/tv_following"
            card_view:layout_constraintTop_toTopOf="@+id/tv_following" />

        <ImageView
            android:id="@+id/imageView3"

            android:layout_width="15dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_repo"
            card_view:layout_constraintStart_toEndOf="@+id/textView2"
            card_view:layout_constraintTop_toTopOf="@+id/imageView2"
            android:contentDescription="@string/repository" />

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/imageView3"
            card_view:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/repository"
            card_view:layout_constraintStart_toEndOf="@+id/tv_repository"
            card_view:layout_constraintTop_toTopOf="@+id/tv_repository" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

